# pico-ble-server

./: CMakeLists.txt  README.md  build  main.py  server.gatt
dev_hid_composite/: CMakeLists.txt
include/: bluetooth_server.h  hide_device.h  server.h  temp_sensor.h
scripts/: main.py
src/: ble_common.c  bluetooth.c  bluetooth_server.c  local_hid.c  main.c  server.c  server_common.c
